--- a/mailBox.html
+++ b/mailBox.html
@@ -64,7 +64,7 @@
 
       <div class="mail row">
         <div class="sidebar col-sm-2">
-          <button class="compose btn btn-danger">
+          <button class="compose btn btn-danger" ui-sref="newmail()">
             Compose
           </button>
 
