--- a/newemail.html
+++ b/newemail.html
@@ -1,40 +1,29 @@
-<div style="
-    position: fixed;
-    background: rgba(0,0,0,0.6);
-    margin: auto;
-    height: 100%;
-    top: 0;
-    width: 100%;
-    left: 0;
-    z-index: 5;
-"></div >
-<div style="
-    position: absolute;
-    top: 0px;
-    padding: 20px;
-    width: 1200px;
-    z-index: 6;
-">
+<div class="shadowbox"></div >
+<div class="in-shadowbox">
 
   <li class="email-item row unread">
      <div class="message col-sm-7">
-                To: <input type="text" value="" />
-     </div><!-- message -->
+        To: 
+        <input type="text" ng-model="userTo" uib-typeahead="usr as usr.StateDesc for usr in userss | filter:$viewValue | limitTo:8">
+     </div>
 
      <div class="date col-sm-2">
-         <date class="pull-right"><a ui-sref="box({ boxId: 1 })">X</a></date>
-     </div><!-- date -->
+         <date class="pull-right"><a ui-sref="home.box({ boxId: 1 })">X</a></date>
+     </div>
   </li>
   <li class="email-item row unread">
     <div class=" col-sm-3">
-        Subject: <span class="people-names"><input type="text" value="" /></span>
+        Subject: <span class="people-names"><input type="text" value=""  ng-model="subject"/></span>
     </div>
 
   </li>
   <li class="email-item row">
-   <textarea></textarea>
-  
+   <textarea ng-model="body"></textarea>
+   <br>
+   <button class="compose btn btn-danger" ng-click="saveMail()">Send</button>
   </li>
+  
 </div>
+
 
           
